Enhance README with AI reflections and project details